@@ -1,7 +1,6 @@
 package com.github.akruk.antlrxquery.values;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import com.github.akruk.antlrxquery.exceptions.XQueryUnsupportedOperation;
 import com.github.akruk.antlrxquery.values.factories.XQueryValueFactory;
@@ -12,17 +11,27 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
         return value;
     }
 
-    public XQuerySequence(List<XQueryValue> list) {
-        value = list;
+    public XQuerySequence(List<XQueryValue> list, XQueryValueFactory valueFactory) {
+        super(list, valueFactory);
     }
 
-    public XQuerySequence(XQueryValue... values) {
-        value = Arrays.asList(values);
+    public XQuerySequence(XQueryValueFactory valueFactory) {
+        super(List.of(), valueFactory);
     }
 
-
-    public XQuerySequence() {
-        value = List.of();
+    @Override
+    public String toString() {
+        StringBuilder sb = new StringBuilder("<");
+        sb.append(super.toString());
+        sb.append(":");
+        int lastIndex = value.size() - 1;
+        for (int i = 0; i < value.size()-1; i++) {
+            sb.append(value.get(i).toString());
+            sb.append(", ");
+        }
+        sb.append(value.get(lastIndex).toString());
+        sb.append("/>");
+        return sb.toString();
     }
 
     @Override
@@ -48,17 +57,17 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
 
 
     @Override
-    public XQueryValue valueEqual(XQueryValueFactory valueFactory, XQueryValue other) {
-        return XQueryBoolean.FALSE;
+    public XQueryValue valueEqual(XQueryValue other) {
+        return valueFactory.bool(false);
     }
 
     @Override
-    public XQueryValue valueLessThan(XQueryValueFactory valueFactory, XQueryValue other) {
-        return XQueryBoolean.FALSE;
+    public XQueryValue valueLessThan(XQueryValue other) {
+        return valueFactory.bool(false);
     }
 
     @Override
-    public XQueryValue union(XQueryValueFactory valueFactory, XQueryValue otherSequence) throws XQueryUnsupportedOperation {
+    public XQueryValue union(XQueryValue otherSequence) throws XQueryUnsupportedOperation {
         var newSequence = new ArrayList<XQueryValue>();
         newSequence.addAll(value);
         newSequence.addAll(otherSequence.sequence());
@@ -66,12 +75,12 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
     }
 
     @Override
-    public XQueryValue intersect(XQueryValueFactory valueFactory, XQueryValue otherSequence) throws XQueryUnsupportedOperation {
+    public XQueryValue intersect(XQueryValue otherSequence) throws XQueryUnsupportedOperation {
         var otherSequenceValue = otherSequence.sequence();
         var newSequence = new ArrayList<XQueryValue>(otherSequenceValue.size());
         for (var element : value) {
             for (var otherElement : otherSequenceValue) {
-                if (element.valueEqual(valueFactory, otherElement).booleanValue()) {
+                if (element.valueEqual(otherElement).booleanValue()) {
                     newSequence.add(element);
                 }
             }
@@ -81,13 +90,13 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
 
 
     @Override
-    public XQueryValue except(XQueryValueFactory valueFactory, XQueryValue otherSequence) throws XQueryUnsupportedOperation {
+    public XQueryValue except(XQueryValue otherSequence) throws XQueryUnsupportedOperation {
         var otherSequenceValue = otherSequence.sequence();
         var newSequence = new ArrayList<XQueryValue>(otherSequenceValue.size());
         NEXT_ELEMENT:
         for (var element : value) {
             for (var otherElement : otherSequenceValue) {
-                if (element.valueEqual(valueFactory, otherElement).booleanValue()) {
+                if (element.valueEqual(otherElement).booleanValue()) {
                     continue NEXT_ELEMENT;
                 }
             }
@@ -99,19 +108,19 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
 
 
     @Override
-    public XQueryValue copy(XQueryValueFactory valueFactory) {
+    public XQueryValue copy() {
         return valueFactory.sequence(List.copyOf(value));
     }
 
 
     @Override
-    public XQueryValue empty(XQueryValueFactory valueFactory) throws XQueryUnsupportedOperation {
-        return XQueryBoolean.of(value.isEmpty());
+    public XQueryValue empty() throws XQueryUnsupportedOperation {
+        return valueFactory.bool(value.isEmpty());
     }
 
 
     @Override
-    public XQueryValue head(XQueryValueFactory valueFactory) throws XQueryUnsupportedOperation {
+    public XQueryValue head() throws XQueryUnsupportedOperation {
         if (value.isEmpty())
             return valueFactory.emptySequence();
         return value.get(0);
@@ -119,17 +128,15 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
 
 
     @Override
-    public XQueryValue tail(XQueryValueFactory valueFactory) throws XQueryUnsupportedOperation {
+    public XQueryValue tail() throws XQueryUnsupportedOperation {
         if (value.isEmpty())
             return valueFactory.emptySequence();
         return valueFactory.sequence(value.subList(1, value.size()));
     }
 
     @Override
-    public XQueryValue insertBefore(
-            XQueryValueFactory valueFactory,
-            XQueryValue position,
-            XQueryValue inserted) throws XQueryUnsupportedOperation
+    public XQueryValue insertBefore(XQueryValue position, XQueryValue inserted)
+    throws XQueryUnsupportedOperation
     {
         var newSequence = new ArrayList<XQueryValue>(value.size());
         newSequence.addAll(value);
@@ -149,7 +156,7 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
     }
 
     @Override
-    public XQueryValue remove(XQueryValueFactory valueFactory, XQueryValue position) throws XQueryUnsupportedOperation
+    public XQueryValue remove(XQueryValue position) throws XQueryUnsupportedOperation
     {
         var newSequence = new ArrayList<XQueryValue>(value.size());
         newSequence.addAll(value);
@@ -168,7 +175,7 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
 
 
     @Override
-    public XQueryValue reverse(XQueryValueFactory valueFactory) throws XQueryUnsupportedOperation
+    public XQueryValue reverse() throws XQueryUnsupportedOperation
     {
         var newSequence = List.copyOf(value);
         return valueFactory.sequence(newSequence.reversed());
@@ -177,12 +184,12 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
 
 
     @Override
-    public XQueryValue subsequence(XQueryValueFactory valueFactory, int startingLoc) throws XQueryUnsupportedOperation {
-        return subsequence(valueFactory, startingLoc, value.size()-startingLoc+1);
+    public XQueryValue subsequence(int startingLoc) throws XQueryUnsupportedOperation {
+        return subsequence(startingLoc, value.size()-startingLoc+1);
     }
 
     @Override
-    public XQueryValue subsequence(XQueryValueFactory valueFactory, int startingLoc, int length) throws XQueryUnsupportedOperation {
+    public XQueryValue subsequence(int startingLoc, int length) throws XQueryUnsupportedOperation {
         int currentLength = value.size();
         if (startingLoc > currentLength) {
             return valueFactory.emptySequence();
@@ -194,7 +201,7 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
     }
 
     @Override
-    public XQueryValue distinctValues(XQueryValueFactory valueFactory) throws XQueryUnsupportedOperation {
+    public XQueryValue distinctValues() throws XQueryUnsupportedOperation {
         int currentLength = value.size();
         if (currentLength == 0) {
             return valueFactory.emptySequence();
@@ -202,7 +209,7 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
         var newSequence = new ArrayList<XQueryValue>(value.size());
         for (var element : value) {
             var exists = newSequence.stream().filter(
-                    v -> v == element || v.valueEqual(valueFactory, element).booleanValue()).findFirst().isPresent();
+                    v -> v == element || v.valueEqual(element).booleanValue()).findFirst().isPresent();
             if (!exists) {
                 newSequence.add(element);
             }
@@ -211,7 +218,7 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
     }
 
     @Override
-    public XQueryValue zeroOrOne(XQueryValueFactory valueFactory) throws XQueryUnsupportedOperation {
+    public XQueryValue zeroOrOne() throws XQueryUnsupportedOperation {
         return switch (value.size()) {
             case 0, 1 -> this;
             default -> null;
@@ -219,7 +226,7 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
     }
 
     @Override
-    public XQueryValue oneOrMore(XQueryValueFactory valueFactory) throws XQueryUnsupportedOperation {
+    public XQueryValue oneOrMore() throws XQueryUnsupportedOperation {
         return switch (value.size()) {
             case 0 -> null;
             default -> this;
@@ -227,7 +234,7 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
     }
 
     @Override
-    public XQueryValue exactlyOne(XQueryValueFactory valueFactory) throws XQueryUnsupportedOperation {
+    public XQueryValue exactlyOne() throws XQueryUnsupportedOperation {
         return switch (value.size()) {
             case 1 -> this;
             default -> null;
@@ -235,8 +242,18 @@ public class XQuerySequence extends XQueryValueBase<List<XQueryValue>> {
     }
 
     @Override
-    public XQueryValue data(XQueryValueFactory valueFactory) throws XQueryUnsupportedOperation {
+    public XQueryValue data() throws XQueryUnsupportedOperation {
         var atomized = atomize();
         return valueFactory.sequence(atomized);
+    }
+
+    @Override
+    public XQueryValue concatenate(XQueryValue other) throws XQueryUnsupportedOperation {
+        StringBuilder builder = new StringBuilder();
+        for (var e : this.value) {
+            builder.append(e.stringValue());
+        }
+        builder.append(other.stringValue());
+        return valueFactory.string(builder.toString());
     }
 }
